--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,1 +1,8 @@
+.site-header {
+    background-color: #0A192F;  /* change this color */
+}
 
+.site-title,
+.site-nav .page-link {
+    color: white !important;
+}
