--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,6 @@
 .site-header {
     background-color: #0A192F;  /* change this color */
+    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
 }
 
 .site-title,
