--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,1 +1,16 @@
+---
+---
+
+@import "minima";
+
+/* Navigation bar background */
+.site-header {
+  background-color: #0A192F;
+}
+
+/* Nav text color */
+.site-title,
+.site-nav .page-link {
+  color: #ffffff !important;
+}
 
