--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,7 +5,7 @@
 
 /* Navigation bar background */
 .site-header {
-  background-color: #4F7942;
+  background-color: #0B6623;
 }
 
 /* Nav text color */
